@@ -2,6 +2,7 @@ Revision history for Perl extension App::Sqitch
 
 0.902
      - Fixed another occasional test failure due to a clock tick in `t/pg.t.`
+     - Fixed test failures in `t/status.t` on systems without DBD::Pg.
 
 0.901 2012-08-20T19:31:03Z
      - Fix test failure in `t/status.t` caused by failing to ignore a
